--- a/proxy/docker-compose.yml
+++ b/proxy/docker-compose.yml
@@ -14,12 +14,17 @@ services:
     image: nginx:1.19.2
     restart: always
     dns: 10.0.0.100
+    logging:
+      options:
+        max-file: "5"
+        max-size: "10m"
     networks:
         local:
             ipv4_address: 192.168.0.250
         whale:
             ipv4_address: 10.0.0.110
     volumes:
+      - ./nginx/html:/usr/share/nginx/html
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/conf.d:/etc/nginx/conf.d
       - ./logs:/var/log/nginx
