--- a/filegea/Dockerfile
+++ b/filegea/Dockerfile
@@ -1,14 +1,14 @@
-FROM golang:rc-alpine3.12 AS builder
+FROM golang:rc-alpine3.12 AS build
 
 RUN apk add --no-cache git && \
     git clone https://github.com/WhaleMountain/filegea.git /tmp/filegea && \
-    cd /tmp/filegea \
+    cd /tmp/filegea && \
     go build
 
 FROM alpine:3.12
 
 RUN mkdir -p /opt/filegea/Data
-COPY --from=builder /tmp/filegea/main /opt/filegea/filegea
+COPY --from=build /tmp/filegea/filegea /opt/filegea/filegea
 
 USER filegea
 
