--- a/proxy/docker-compose.yml
+++ b/proxy/docker-compose.yml
@@ -13,7 +13,8 @@ services:
     container_name: proxy
     image: nginx:1.19.2
     restart: always
-    dns: 10.0.0.100
+    dns: 
+        - 10.0.0.100
     logging:
       options:
         max-file: "5"
