--- a/proxy/nginx/conf.d/web.conf
+++ b/proxy/nginx/conf.d/web.conf
@@ -1,6 +1,11 @@
 server {
     listen       80;
     server_name  whalem.net;
+
+    add_header X-Frame-Options SAMEORIGIN always;
+    add_header X-Content-Type-Options nosniff;
+    add_header X-XSS-Protection "1; mode=block";
+
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
