--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: Build
         run: hugo
+        working-directory: ./pages
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
