--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -30,4 +30,5 @@ jobs:
         with: 
           external_repository: WhaleMountain/WhaleMountain.github.io
           publish_branch: main
+          publish_dir: ./pages/public
           deploy_key: ${{ secrets.ACTIONS_PAGE_DEPLOY_KEY }}
