--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -32,3 +32,4 @@ jobs:
           publish_branch: main
           publish_dir: ./pages/public
           deploy_key: ${{ secrets.ACTIONS_PAGE_DEPLOY_KEY }}
+          cname: whalem.net
