update submodule and config.toml

--- a/pages/config.toml
+++ b/pages/config.toml
@@ -11,6 +11,10 @@ paginate = 10
 enableGitInfo = true
 enableRobotsTXT = true
 
+[markup]
+  [markup.highlight]
+    codeFences = false
+
 # Theme config
 [params]
 
