removing categories taxonomies

--- a/pages/config.toml
+++ b/pages/config.toml
@@ -11,6 +11,9 @@ paginate = 10
 enableGitInfo = true
 enableRobotsTXT = true
 
+[taxonomies]
+  tag = 'tags'
+
 [markup]
   [markup.highlight]
     codeFences = false
