--- a/pages/config.toml
+++ b/pages/config.toml
@@ -6,7 +6,8 @@ author = "Whale Mountain"
 
 # Copyright notice. This will display on the footer.
 copyright = "© 2021 Whale Mountain. Theme yuki. Powered by Hugo."
-paginate = 10
+[pagination]
+  pagerSize = 10
 
 enableGitInfo = true
 enableRobotsTXT = true
